// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InfoPage component renders correctly when open 1`] = `
<div
  class="MuiDialog-root"
  data-testid="info-page"
  role="presentation"
  style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
>
  <div
    aria-hidden="true"
    class="MuiBackdrop-root"
    style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
  />
  <div
    data-test="sentinelStart"
    tabindex="0"
  />
  <div
    class="MuiDialog-container MuiDialog-scrollPaper"
    role="none presentation"
    style="webkit-transform: none; transform: none; webkit-transition: -webkit-transform 225ms cubic-bezier(0.0, 0, 0.2, 1) 0ms; transition: transform 225ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;"
    tabindex="-1"
  >
    <div
      class="MuiPaper-root MuiDialog-paper MuiDialog-paperScrollPaper MuiDialog-paperWidthSm MuiPaper-elevation24 MuiPaper-rounded"
      role="dialog"
    >
      <div
        class="MuiDialogTitle-root"
      >
        <h2
          class="MuiTypography-root MuiTypography-h6"
        >
          RUlaub v1.0.0
        </h2>
      </div>
      <div
        class="MuiDialogContent-root"
      >
        <p
          class="MuiTypography-root MuiDialogContentText-root makeStyles-helpPageText-32 MuiTypography-body1 MuiTypography-colorTextSecondary"
        >
          <span
            class="MuiTypography-root MuiTypography-body1"
          >
            RUlaub is licensed under either 'Apache License 2.0' or 'MIT License' at your option.
          </span>
          <span
            class="MuiTypography-root MuiTypography-body1"
          >
            For the Source Code, Documentation and copies of the License files please see the github repository at: 
            <a
              class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
              href="https://github.com/Cielquan/RUlaub"
              rel="noreferrer"
              target="_blank"
            >
              github
            </a>
            .
          </span>
        </p>
      </div>
      <div
        class="MuiDialogActions-root MuiDialogActions-spacing"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary Mui-focusVisible Mui-focusVisible"
          data-testid="info-page-btn"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            Close
          </span>
          <span
            class="MuiTouchRipple-root"
          >
            <span
              class="MuiTouchRipple-ripple MuiTouchRipple-rippleVisible MuiTouchRipple-ripplePulsate"
              style="width: 1px; height: 1px; top: -0.5px; left: -0.5px;"
            >
              <span
                class="MuiTouchRipple-child MuiTouchRipple-childPulsate"
              />
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    data-test="sentinelEnd"
    tabindex="0"
  />
</div>
`;

exports[`InfoPage component renders invisible by default 1`] = `
<div
  aria-hidden="true"
  class="MuiDialog-root"
  data-testid="info-page"
  role="presentation"
  style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px; visibility: hidden;"
>
  <div
    aria-hidden="true"
    class="MuiBackdrop-root"
    style="opacity: 0; visibility: hidden;"
  />
  <div
    data-test="sentinelStart"
    tabindex="0"
  />
  <div
    class="MuiDialog-container MuiDialog-scrollPaper"
    role="none presentation"
    style="visibility: hidden; webkit-transform: translateY(768px) translateY(0px); transform: translateY(768px) translateY(0px);"
    tabindex="-1"
  >
    <div
      class="MuiPaper-root MuiDialog-paper MuiDialog-paperScrollPaper MuiDialog-paperWidthSm MuiPaper-elevation24 MuiPaper-rounded"
      role="dialog"
    >
      <div
        class="MuiDialogTitle-root"
      >
        <h2
          class="MuiTypography-root MuiTypography-h6"
        >
          RUlaub v1.0.0
        </h2>
      </div>
      <div
        class="MuiDialogContent-root"
      >
        <p
          class="MuiTypography-root MuiDialogContentText-root makeStyles-helpPageText-9 MuiTypography-body1 MuiTypography-colorTextSecondary"
        >
          <span
            class="MuiTypography-root MuiTypography-body1"
          >
            RUlaub is licensed under either 'Apache License 2.0' or 'MIT License' at your option.
          </span>
          <span
            class="MuiTypography-root MuiTypography-body1"
          >
            For the Source Code, Documentation and copies of the License files please see the github repository at: 
            <a
              class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
              href="https://github.com/Cielquan/RUlaub"
              rel="noreferrer"
              target="_blank"
            >
              github
            </a>
            .
          </span>
        </p>
      </div>
      <div
        class="MuiDialogActions-root MuiDialogActions-spacing"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary Mui-focusVisible Mui-focusVisible"
          data-testid="info-page-btn"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            Close
          </span>
          <span
            class="MuiTouchRipple-root"
          >
            <span
              class="MuiTouchRipple-ripple MuiTouchRipple-rippleVisible MuiTouchRipple-ripplePulsate"
              style="width: 1px; height: 1px; top: -0.5px; left: -0.5px;"
            >
              <span
                class="MuiTouchRipple-child MuiTouchRipple-childPulsate"
              />
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    data-test="sentinelEnd"
    tabindex="0"
  />
</div>
`;
